@@ -1,5 +1,7 @@
 == (unreleased)
 
+* Play nice with rubies that don't inspect terminals well (ie. JRuby) by defaulting screen columns to 80 [Bob McWhirter]
+
 * Rollback of deploy:symlink would explode if there was no previous revision to rollback to [Jamis Buck]
 
 * Fix bug in transfer.rb that caused get/put/upload/download to ignore blocks passed to them [arika]
